--- a/pm-analyze/consumer-spark/pom.xml
+++ b/pm-analyze/consumer-spark/pom.xml
@@ -28,5 +28,10 @@
             <artifactId>commons-pool2</artifactId>
             <version>2.2</version>
         </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.7.3</version>
+        </dependency>
     </dependencies>
 </project>
