--- a/pm-analyze/producer/pom.xml
+++ b/pm-analyze/producer/pom.xml
@@ -9,8 +9,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
-    <groupId>com.pm-analyze.productor</groupId>
-    <artifactId>productor</artifactId>
+    <groupId>com.pm-analyze.producer</groupId>
+    <artifactId>producer</artifactId>
 
     <dependencies>
         <dependency>
@@ -18,5 +18,16 @@
             <artifactId>javadbf</artifactId>
             <version>0.4.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka_2.10</artifactId>
+            <version>0.8.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.8.0</version>
+        </dependency>
+
     </dependencies>
 </project>
