--- a/pm-analyze/clusterAnalysis/pom.xml
+++ b/pm-analyze/clusterAnalysis/pom.xml
@@ -8,11 +8,9 @@
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <packaging>jar</packaging>
-    <groupId>com.weibo-analyze.consumer-spark</groupId>
-    <artifactId>consumer-spark</artifactId>
 
-    <dependencies>
+    <groupId>com.weibo-analyze.clusterAnalysis</groupId>
+    <artifactId>clusterAnalysis</artifactId>
 
-    </dependencies>
+
 </project>
