--- a/pm-analyze/producer/pom.xml
+++ b/pm-analyze/producer/pom.xml
@@ -3,31 +3,17 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>pm-analyze</artifactId>
-        <groupId>com.pm-analyze</groupId>
+        <artifactId>weibo-analyze</artifactId>
+        <groupId>com.weibo-analyze</groupId>
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
-    <groupId>com.pm-analyze.producer</groupId>
+    <groupId>com.weibo-analyze.producer</groupId>
     <artifactId>producer</artifactId>
 
     <dependencies>
-        <dependency>
-            <groupId>com.linuxense</groupId>
-            <artifactId>javadbf</artifactId>
-            <version>0.4.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.kafka</groupId>
-            <artifactId>kafka_2.10</artifactId>
-            <version>0.8.2.1</version>
-        </dependency>
-        <dependency>
-            <groupId>redis.clients</groupId>
-            <artifactId>jedis</artifactId>
-            <version>2.8.0</version>
-        </dependency>
+
 
     </dependencies>
 </project>
